# teeworlds-ouya

./: .gitignore  OUYA_PORT.md  README.md
android/: .gitignore  build.gradle  build_native.bat
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: autoexec.cfg
android/app/src/main/cpp/: CMakeLists.txt  tw_android.cpp  tw_sha256.c
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/app/src/main/java/org/teeworlds/ouya/: AssetExporter.java  LoaderActivity.java  TeeworldsActivity.java
android/app/src/main/res/values/: strings.xml
src/base/: system.c
src/engine/client/: backend_sdl.cpp  client.cpp  graphics_threaded.cpp  input.cpp  input.h
src/game/client/: gameclient.cpp  render_map.cpp  ui.cpp
src/game/client/components/: menus.cpp
